2006-07-29  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.2.0

	* ebuild_fail/: Add failure hook so we can clean up from ourselves.

2006-07-27  Mike Kelly  <pioto@pioto.org>

	* ebuild_postrm_post/dynusers.bash.in: Remove the now unnecessary
	sourcing of ${scriptdir}/common/config.

2006-07-26  Mike Kelly  <pioto@pioto.org>

	* ebuild_setup_pre/dynusers.bash.in: Use the add.sh from dynusers to
	do all the heavy lifting, we just feed it a few raw variables.

2006-07-24  Mike Kelly  <pioto@pioto.org>

	* ebuild_postrm_post/dynusers.bash.in: Make use of ${scriptdir}/db.sh
	to interface with the backend db instead of doing it directly
	ourselves.

	* ebuild_postrm_post/dynusers.bash.in: Drop the s from the user and
	group DBDIR subdirs.

2006-07-20  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.1.3

	* ebuild_setup_pre/dynusers.bash.in: Update to pass
	"${USERLAND}-${ELIBC}" as the unique system identifier, instead of
	just USERLAND.

2006-07-18  Mike Kelly  <pioto@pioto.org>

	* ebuild_postrm_post/: Add a postrm hook.

2006-07-17  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.1.2

2006-07-15  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.1.1