@@ -1,3 +1,8 @@
+2006-07-31  Mike Kelly  <pioto@pioto.org>
+
+	* ebuild_*/*bash*: Switch all called scripts from dynusers to end in
+	.bash instead of just .sh. Prepare for 0.3.0 release.
+
 2006-07-29  Mike Kelly  <pioto@pioto.org>
 
 	+ Release: 0.2.0
